added hazard icon, and logic for turn signals and hazards

--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -46,7 +46,7 @@
         android:src="@drawable/icon_head_lights"
         android:layout_marginTop="30dp"
         android:id="@+id/iconHeadLights"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:elevation="24dp"
         android:tint="@android:color/holo_orange_light"
         android:backgroundTintMode="add"
@@ -59,7 +59,7 @@
         android:layout_height="110dp"
         android:src="@drawable/icon_high_beam"
         android:id="@+id/iconHighBeams"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:elevation="24dp"
         android:tint="@android:color/holo_blue_bright"
         android:backgroundTintMode="add"
@@ -146,9 +146,10 @@
         android:layout_height="110dp"
         android:src="@drawable/icon_left_turn"
         android:id="@+id/iconRightTurn"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:elevation="24dp"
-        android:tint="@android:color/holo_blue_bright"
+        android:scaleX="-1"
+        android:tint="@android:color/holo_orange_light"
         android:backgroundTintMode="add"
         android:layout_alignTop="@+id/iconLeftTurn"
         android:layout_toRightOf="@+id/switchRightTurn"
@@ -158,25 +159,25 @@
         android:layout_width="150dp"
         android:layout_height="110dp"
         android:src="@drawable/icon_left_turn"
-        android:visibility="invisible"
+        android:id="@+id/iconLeftTurn"
+        android:visibility="visible"
         android:elevation="24dp"
-        android:tint="@android:color/holo_blue_bright"
+        android:tint="@android:color/holo_orange_light"
+        android:backgroundTintMode="add"
+        android:layout_alignTop="@+id/iconHighBeams"
+        android:layout_toRightOf="@+id/iconHighBeams"
+        android:layout_toEndOf="@+id/iconHighBeams" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="110dp"
+        android:src="@drawable/icon_hazards"
+        android:visibility="visible"
+        android:elevation="24dp"
+        android:tint="@android:color/holo_orange_light"
         android:backgroundTintMode="add"
         android:id="@+id/iconHazardLight"
         android:layout_alignTop="@+id/iconRightTurn"
         android:layout_toRightOf="@+id/iconRightTurn"
         android:layout_toEndOf="@+id/iconRightTurn" />
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="110dp"
-        android:src="@drawable/icon_left_turn"
-        android:id="@+id/iconLeftTurn"
-        android:visibility="invisible"
-        android:elevation="24dp"
-        android:tint="@android:color/holo_blue_bright"
-        android:backgroundTintMode="add"
-        android:layout_alignTop="@+id/iconHighBeams"
-        android:layout_toRightOf="@+id/iconHighBeams"
-        android:layout_toEndOf="@+id/iconHighBeams" />
 </RelativeLayout>
