fixed light icons

--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -38,7 +38,8 @@
         tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
         android:layout_toStartOf="@+id/iconRightTurn"
         android:layout_alignRight="@+id/switchHighBeams"
-        android:layout_alignEnd="@+id/switchHighBeams" />
+        android:layout_alignEnd="@+id/switchHighBeams"
+        android:layout_toLeftOf="@+id/iconRightTurn" />
 
     <ImageView
         android:layout_width="150dp"
