--- a/BrakingSystem/PiBraking/app/src/main/res/layout/activity_pi_braking.xml
+++ b/BrakingSystem/PiBraking/app/src/main/res/layout/activity_pi_braking.xml
@@ -9,20 +9,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/auto_pic_resize"
-    tools:context="ist440.pibraking.PiBraking">
+    tools:context="ist440.pibraking.PiBraking"
+    android:background="#FFFFFF">
 
-
-    <ToggleButton
-        android:text="ToggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rRight"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="102dp"
-        android:id="@+id/absBrake"
-        android:textOff="ABS:OFF"
-        android:textOn="ABS:ON" />
+    <ImageView
+        android:layout_width="800dp"
+        app:srcCompat="@drawable/auto_pic_resize"
+        android:id="@+id/brakeStatus"
+        android:layout_height="600dp" />
 
     <ImageView
         android:layout_width="35dp"
@@ -30,36 +24,11 @@
         app:srcCompat="@android:color/transparent"
         android:id="@+id/fLeft"
         android:background="#50ff2f2f"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_above="@+id/absBrake"
-        android:layout_toRightOf="@+id/absBrake"
-        android:layout_toEndOf="@+id/absBrake" />
-
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="65dp"
-        app:srcCompat="@android:color/transparent"
-        android:layout_marginTop="53dp"
-        android:id="@+id/rLeft"
-        android:background="#50ff2f2f"
-
-        android:layout_below="@+id/absBrake"
-        android:layout_alignLeft="@+id/fLeft"
-        android:layout_alignStart="@+id/fLeft" />
-
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="65dp"
-        app:srcCompat="@android:color/transparent"
-        android:layout_marginTop="60dp"
-        android:id="@+id/rRight"
-        android:background="#50ff2f2f"
-        android:layout_marginRight="38dp"
-        android:layout_marginEnd="38dp"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/absBrake"
-        android:layout_toStartOf="@+id/absBrake" />
+        android:layout_alignTop="@+id/fRight"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="163dp"
+        android:layout_marginStart="163dp" />
 
     <ImageView
         android:layout_width="35dp"
@@ -68,8 +37,88 @@
         android:id="@+id/fRight"
         android:background="#50ff2f2f"
 
-        android:layout_alignTop="@+id/rLeft"
+        android:layout_marginTop="90dp"
+        android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/rRight"
         android:layout_alignStart="@+id/rRight" />
+
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/rLeft"
+        android:background="#50ff2f2f"
+
+        android:layout_alignTop="@+id/rRight"
+        android:layout_alignRight="@+id/fLeft"
+        android:layout_alignEnd="@+id/fLeft" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:id="@+id/absBrake"
+        android:textOff="ABS:OFF"
+        android:textOn="ABS:ON"
+        android:layout_marginRight="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_below="@+id/brakeStatus"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_height="50dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
+        android:id="@+id/eBrake"
+        android:layout_below="@+id/rRight"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textOn="E-Brake:on"
+        android:textOff="E-Brake:off"
+        android:layout_width="125dp" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:id="@+id/brake"
+        android:layout_marginBottom="14dp"
+        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:textOff="Brake:OFF"
+        android:textOn="Brake:ON"
+        android:textSize="24sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/eBrake"
+        android:layout_alignStart="@+id/eBrake"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:id="@+id/sensorBrake"
+        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:textOff="Sensor:OFF"
+        android:textOn="Sensor:ON"
+        android:textSize="24sp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignBottom="@+id/brake"
+        android:layout_alignRight="@+id/absBrake"
+        android:layout_alignEnd="@+id/absBrake" />
+
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/rRight"
+        android:background="#50ff2f2f"
+        android:layout_marginBottom="122dp"
+        android:layout_alignBottom="@+id/brakeStatus"
+        android:layout_alignLeft="@+id/sensorBrake"
+        android:layout_alignStart="@+id/sensorBrake"
+        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp" />
 
 </RelativeLayout>
